--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/12856dea56.js" crossorigin="anonymous"></script>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- styleaheet -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-    
+    <main>
+        <!-- Top Banner section start now -->
+        <section class="top-banner-section">
+            <div class="container">
+                <div class="main-column">
+                    <div class="left-column">
+                        <div class="banner-caption">
+                            <h1>The Greatest show on the earth</h1>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply
+                                random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                                over 2000 years old.</p>
+                                <a href="#" class="common-button">Watch Live <i class="fa-solid fa-angle-right icon"></i></a>  
+                        </div>
+                    </div>
+                    <div class="right-column">
+                        <img src="assets/Banner Image.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+    </main>
 </body>
+
 </html>
