--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                             <p>Contrary to popular belief, Lorem Ipsum is not simply
                                 random text. It has roots in a piece of classical Latin literature from 45 BC, making it
                                 over 2000 years old.</p>
-                                <a href="#" class="common-button">Watch Live <i class="fa-solid fa-angle-right icon"></i></a>  
+                            <a href="#" class="common-button">Watch Live <i
+                                    class="fa-solid fa-angle-right icon"></i></a>
                         </div>
                     </div>
                     <div class="right-column">
@@ -39,7 +40,104 @@
             </div>
         </section>
 
-
+        <section class="blog-section">
+            <div class="container">
+                <div class="main-column">
+                    <div class="left-column">
+                        <div class="buttons">
+                            <div class="button">
+                                <a href="">Upcoming Match</a>
+                                <a class="btn-2" href="">All Group</a>
+                                <a href="">Blog</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-column">
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                        <div class="blogs-item">
+                            <img src="assets/Blog Image.png" alt="">
+                            <div class="blog-info">
+                                <h4> <a class="common-button" href="">Transfer</a></h4>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
+                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
