--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
         </section>
 
+        <!-- Blog section start now -->
         <section class="blog-section">
             <div class="container">
                 <div class="main-column">
@@ -139,7 +140,26 @@
             </div>
         </section>
 
-
+        <!-- Footer section start now -->
+        <section class="footer-section">
+            <div class="container">
+                <div class="row-1">
+                    <h1>Goal</h1>
+                </div>
+                <div class="row-2">
+                    <ul>
+                        <li>
+                            <a href="">Contact Us</a>
+                            <a href="">Terms of Service</a>
+                            <a href=""> Privacy Policy</a>
+                            <a href=""> Privacy Settings</a>
+                            <a href=""> Goal App</a>
+                            <a href=""> Goal Live</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
 
 
