--- a/match.html
+++ b/match.html
@@ -47,40 +47,14 @@
                     <div class="left-column">
                         <div class="buttons">
                             <div class="button">
-                                <a href="match.html">Upcoming Match</a>
+                                <a href="">Upcoming Match</a>
                                 <a class="btn-2" href="">All Group</a>
-                                <a href="">Blog</a>
+                                <a href="index.html">Blog</a>
                             </div>
                         </div>
                     </div>
                     <div class="right-column">
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
+                        
                         <div class="blogs-item">
                             <img src="assets/Blog Image.png" alt="">
                             <div class="blog-info">
