--- a/match.html
+++ b/match.html
@@ -53,62 +53,100 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right-column">
+                    <div class="match-shedeul">
+                        <div class="right-column">
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                            <div class="blogs-item ">
+                                <div class="flags">
+                                    <div class="flag-1">
+                                        <img src="assets/Flag.png" alt="">
+                                    </div>
+                                    <span>VS</span>
+                                    <div class="flag-2">
+                                        <img src="assets/germany Flag.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="blog-info">
+                                    <h3 class="title">Germany VS France</h3>
+                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                </div>
+                            </div>
+                        </div>
                         
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
-                        <div class="blogs-item">
-                            <img src="assets/Blog Image.png" alt="">
-                            <div class="blog-info">
-                                <h4> <a class="common-button" href="">Transfer</a></h4>
-                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                                <i class="fa-solid fa-clock-rotate-left"></i><span class="icon-1">10h</span>
-                                <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
