--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
         <!-- Top Banner section start now -->
         <section class="top-banner-section">
             <div class="container">
-                <div class="main-column">
-                    <div class="left-column">
-                        <div class="banner-caption">
-                            <h1>The Greatest show on the earth</h1>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply
-                                random text. It has roots in a piece of classical Latin literature from 45 BC, making it
-                                over 2000 years old.</p>
-                            <a href="#" class="common-button">Watch Live <i
-                                    class="fa-solid fa-angle-right icon"></i></a>
+                <div class="background-color">
+                    <div class="main-column">
+                        <div class="left-column">
+                            <div class="banner-caption">
+                                <h1>The Greatest show on the earth</h1>
+                                <p>Contrary to popular belief, Lorem Ipsum is not simply
+                                    random text. <span>It has roots in a piece of classical Latin literature from 45 BC, making it
+                                    over 2000 years old.</span></p>
+                                <a href="#" class="common-button">Watch Live <i
+                                        class="fa-solid fa-angle-right icon"></i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="right-column">
-                        <img src="assets/Banner Image.png" alt="">
+                        <div class="right-column">
+                            <img src="assets/Banner Image.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,6 +128,8 @@
                                 <i class="fa-solid fa-message"></i><span class="icon-2">23</span>
                             </div>
                         </div>
+                        <div class="view-button">
+                        </div>
                         <div class="blogs-item">
                             <img src="assets/Blog Image.png" alt="">
                             <div class="blog-info">
@@ -137,6 +141,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="view-button"><a href="#" >View all</a></div>
             </div>
         </section>
 
