--- a/match.html
+++ b/match.html
@@ -69,8 +69,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
                                     <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="blogs-item ">
