--- a/match.html
+++ b/match.html
@@ -29,8 +29,8 @@
                                 <h1>The Greatest show on the earth</h1>
                                 <p>Contrary to popular belief, Lorem Ipsum is not simply
                                     random text.<span> It has roots in a piece of classical Latin literature from 45 BC,
-                                    making it
-                                    over 2000 years old.</span></p>
+                                        making it
+                                        over 2000 years old.</span></p>
                                 <a href="#" class="common-button">Watch Live <i
                                         class="fa-solid fa-angle-right icon"></i></a>
                             </div>
@@ -71,7 +71,7 @@
                                 <div class="blog-info">
                                     <div class="blog-caption">
                                         <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
                                     </div>
                                 </div>
                             </div>
@@ -86,8 +86,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="blogs-item ">
@@ -101,8 +103,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="blogs-item ">
@@ -116,8 +120,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="blogs-item ">
@@ -131,8 +137,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="blogs-item ">
@@ -146,8 +154,10 @@
                                     </div>
                                 </div>
                                 <div class="blog-info">
-                                    <h3 class="title">Germany VS France</h3>
-                                    <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    <div class="blog-caption">
+                                        <h3 class="title">Germany VS France</h3>
+                                        <p class="caption">April 01, 2023, 1.00 AM</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
