--- a/match.html
+++ b/match.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fifa-</title>
+    <title>Fifa-World Cup 2022</title>
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/12856dea56.js" crossorigin="anonymous"></script>
     <!-- Google fonts -->
